# mgncs4touch

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  README.md  RELEASE-NOTES.md  buildlib-rtems  cmake_mgncs4padconfig.h.in  configure.ac  configure.in  mgncs4touch.pc.in
etc/: Makefile.am
include/: Makefile.am  balloon_tip_maker.h  manimation.h  mbtnnavbar.h  mcenterhbox.h  mcombopicker.h  mcontainerctrl.h  mdatepicker.h  mexlist.h  mexnode.h  mfillboxex.h  mgncs4touch.h  miconflow.h  mimgnavbar.h  mitembar.h  mitemiterator.h  mlayout_manager.h  mlinevbox.h  mnewtrackbar.h  mpad.h  mpaddebug.h  mpcomm.h  mpicker.h  mpieceitem.h  mswitchbutton.h  mtimepicker.h  mtouchcomm.h  mtouchdebug.h  mtouchrdr.h
include/physics-animation/: chipmunk-utils.h  mspeedmeter.h  physics-animation.h
include/pieces/: Makefile.am  m3dbuttonpiece.h  mabstractitemmanager.h  manimationeditpiece.h  mbuttonboxpiece.h  mbuttonpanelpiece.h  mcheckmarkpiece.h  mcolorablelabelpiece.h  mexseparatorpiece.h  mgroupitemiterator.h  mgroupitemmanager.h  mgrouppieceitem.h  mhscrollviewpiece.h  mimagepiece.h  mindexlocatepiece.h  mindicatorbuttonpiece.h  mindicatorpiece.h  mitempiece.h  mlistitemiterator.h  mlistitemmanager.h  mnavigationbarpiece.h  mnavigationitem.h  mnavigationpanelpiece.h  mnsdrawpiece.h  mpanelpiece.h  mphoneseparatorpiece.h  mphonestaticrdrpiece.h  mpushbuttonpiece.h  mradiopiece.h  mrotateswitchpiece.h  mscrollviewpiece.h  mshapeboxpiece.h  mshapepushbuttonpiece.h  msimagepiece.h  mslideswitchpiece.h  mtableviewitempiece.h  mtableviewpiece.h  mtextpiece.h  mtransroundpiece.h  mwidgethostpiece.h  (+1 more)
plugin/: Makefile.am
plugin/guibuilder/: Makefile.am  uieditor.layout
plugin/guibuilder/icon/: Makefile.am
plugin/guibuilder/renderer/: Makefile.am  rdrlist
plugin/guibuilder/renderer/fashion/: Makefile.am  animation.xml  btnnavbar.xml  combopicker.xml  datepicker.xml  imgnavbar.xml  itembar.xml  newtrackbar.xml  picker.xml  switchbutton.xml  timepicker.xml
plugin/guibuilder/uieditor/: Makefile.am  ctrllist  mgncs4touch.cfg  pad.cfg
plugin/guibuilder/uieditor/defines/: Makefile.am  animation.xml  btnnavbar.xml  combopicker.xml  container.xml  datepicker.xml  iconflow.xml  imgnavbar.xml  itembar.xml  newtrackbar.xml  picker.xml  switchbutton.xml  timepicker.xml
samples/: Makefile.am  balloontip.c  btnnavbar.c  comm_draw.c  datepicker.c  exlist.c  hscrollview.c  iconflow.c  imgnavbar.c  itembar.c  msimpletableviewpiece.h  name2value.c  newtrackbar.c  picker.c  settingclockpiece.c  settingmainwinpiece.c  settingmainwinpiece.h  settingsubwinpiece.c  settingsubwinpiece.h  settingtableview.c  settingtableview.h  switchbutton.c  tableview.c  timepicker.c
samples/res/: Makefile.am
src/: CMakeLists.txt  Makefile.am  balloon_tip_maker.c  lf_pad.c  lf_touch.c  manimation.c  mbtnnavbar.c  mcenterhbox.c  mcombopicker.c  mcontainerctrl.c  mdatepicker.c  mexlist.c  mexnode.c  mfillboxex.c  mgncs4touch.c  miconflow.c  mimgnavbar.c  mitembar.c  mitemiterator.c  mlayout_manager.c  mlinevbox.c  mnewtrackbar.c  mpad.c  mpadrdr.c  mpcomm.c  mpicker.c  mpieceitem.c  mswitchbutton.c  mtimepicker.c  mtouchcomm.c  mtouchrdr.c  pad_pieces.c  touch_pieces.c  touch_widget_rdr.c
src/physics-animation/: Makefile.am  chipmunk-utils.c  mspeedmeter.c  physics-animation.c
src/pieces/: CMakeLists.txt  Makefile.am  m3dbuttonpiece.c  mabstractitemmanager.c  manimationeditpiece.c  mbuttonpanelpiece.c  mcheckmarkpiece.c  mcolorablelabelpiece.c  mexseparatorpiece.c  mgroupitemiterator.c  mgroupitemmanager.c  mgrouppieceitem.c  mhscrollviewpiece.c  mimagepiece.c  mindexlocatepiece.c  mindicatorbuttonpiece.c  mindicatorpiece.c  mitempiece.c  mlistitemiterator.c  mlistitemmanager.c  mnavigationbarpiece.c  mnavigationitem.c  mnavigationpanelpiece.c  mnsdrawpiece.c  mpanelpiece.c  mphoneseparatorpiece.c  mphonestaticrdrpiece.c  mpieceitem.c  mradiopiece.c  mrotateswitchpiece.c  mscrollviewpiece.c  mshapeboxpiece.c  mshapepushbuttonpiece.c  msimagepiece.c  mslideswitchpiece.c  mtableviewitempiece.c  mtableviewpiece.c  mtextpiece.c  mtransroundpiece.c  mwidgethostpiece.c  (+1 more)
test/: Makefile.am  configure.ac  configure.in  imgnavbar.c  newtrackbar.c  picker.c
test/res/: Makefile.am
