EXTRA_DIST = \
    bmpLimg.png \
    bmpRimg.png \
    corner.png \
    indicator_green_click.png \
    indicator_green_normal.png \
    mask_corner.bmp \
    mask_triangle_down.bmp \
    triangle_down.png \
    news.png \
    file.png \
    internet.png \
    1.jpg \
    2.jpg \
    3.jpg \
    4.jpg \
    5.jpg \
    6.jpg \
    7.jpg \
    8.jpg
