AM_CPPFLAGS = -I../../include

noinst_LTLIBRARIES = libpieces.la

COMMON_SRCS = \
    mshapeboxpiece.c \
    mshapepushbuttonpiece.c \
    mimagepiece.c \
    msimagepiece.c \
    mnsdrawpiece.c \
    mcolorablelabelpiece.c \
    m3dbuttonpiece.c \
    mabstractitemmanager.c \
    manimationeditpiece.c \
    mbuttonpanelpiece.c \
    mcheckmarkpiece.c \
    mexseparatorpiece.c \
    mgroupitemiterator.c \
    mgroupitemmanager.c \
    mgrouppieceitem.c \
    mindexlocatepiece.c \
    mindicatorbuttonpiece.c \
    mindicatorpiece.c \
    mitempiece.c \
    mlistitemiterator.c \
    mlistitemmanager.c \
    mpanelpiece.c \
    mradiopiece.c \
    mrotateswitchpiece.c \
    mslideswitchpiece.c \
    mtableviewitempiece.c \
    mtableviewpiece.c \
    mtextpiece.c \
    mtransroundpiece.c \
    mwrappaintpiece.c \
    mscrollviewpiece.c \
    mhscrollviewpiece.c \
    mnavigationbarpiece.c \
    mnavigationitem.c \
    mnavigationpanelpiece.c 
#    mphoneseparatorpiece.c
#    mphonestaticrdrpiece.c
#    mwidgethostpiece.c

libpieces_la_SOURCES = $(COMMON_SRCS)
libpieces_la_LIBADD =
libpieces_la_LDFLAGS =

EXTRA_DIST =

CLEANFILES = *.a

